--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,23 @@
-# Node modules
-node_modules/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Logs
-logs/
-*.log
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# Diretório de ambiente
-.env
-
-# Pastas temporárias do sistema operacional
-.DS_Store
-Thumbs.db
-
-# Build (caso tenha futuramente)
-dist/
-build/
-
-# Pasta de cache
-.cache/
-
-# VSCode settings (opcional)
-.vscode/
